--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "graphql": "^16.6.0",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-scroll": "^1.8.7"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
