--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.9",
     "@auth0/nextjs-auth0": "^1.9.1",
+    "auth0": "^2.42.0",
     "fuse.js": "^6.6.2",
     "graphql": "^16.6.0",
     "next": "12.2.5",
