--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "fuse.js": "^6.6.2",
         "graphql": "^16.6.0",
         "next": "12.2.5",
+        "next-pwa": "^5.6.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-scroll": "^1.8.7"
