--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
         "@apollo/client": "^3.3.21",
         "@auth0/nextjs-auth0": "^1.9.1",
         "auth0": "^2.42.0",
+        "firebase": "^9.12.1",
         "fuse.js": "^6.6.2",
         "graphql": "^16.6.0",
         "next": "12.2.5",
         "next-pwa": "^5.6.0",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-firebase-hooks": "^5.0.3",
         "react-scroll": "^1.8.7"
     },
     "devDependencies": {
